# Image-Segmentation

./: .gitignore  CMakeLists.txt  README.md
src/: build_image_matrix.c  build_image_matrix.h  genetic_algorithm.c  genetic_algorithm.h  image.c  image.h  main.c  queue.c  queue.h  stack.c  stack.h  write_image_matrix.c  write_image_matrix.h
src/stb-master/: CMakeLists.txt  stb.h  stb_image.h  stb_image_write.h
src/stb-master/tests/caveview/: stb_glprog.h
src/stb-master/tests/caveview/win32/: SDL_windows_main.c
src/stb-master/tests/oversample/: README.md
